load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@com_github_atlassian_bazel_tools//gotemplate:def.bzl", "gotemplate")

go_binary(
    name = "hello",
    srcs = ["hello.go"],
)

gotemplate(
    name = "hello.go",
    yaml_contexts = {
        "ctx.yaml": "Name",
    },
    template = "hello.template",
)
